# jackpkgs

./: .envrc  .gitignore  AGENTS.md  README.md  ci.nix  default.nix  diagnostic.nix  flake.nix  garnix.yaml  justfile  nvfetcher.toml  overlay.nix  pyproject.toml
.github/: renovate.json
.github/workflows/: add-to-project.yml  adr-management.yml  build.yml  claude-review.yml  claude.yml  codex-update.yaml  nix-flake-update.yaml  nix.yml  project-auto-add.yaml  roon-update.yaml
.serena/: project.yml
_sources/: generated.json  generated.nix
empty-flake/: flake.nix
home-manager/: default.nix
lib/: default.nix  helm-chart.nix  justfile-helpers.nix  nodejs-helpers.nix  nodejs.nix  opencode.nix  python-env-selection.nix  python-package-fixes.nix  python-workspace-paths.nix  shell-env-hook.nix
modules/: default.nix  dock.nix
overlays/: default.nix  tod-overlay.nix
pkgs/codex/: update.sh  (+1 more)
tests/: adr.nix  checks.nix  container.nix  fmt.nix  helm-chart.nix  just.nix  justfile-validation.nix  lint-recipe.nix  lockfile-cacheability.nix  lockfile-nixpkgs-integration.nix  mkRecipe.nix  mkRecipeWithParams.nix  module-justfiles.nix  nodejs-hermetic.nix  opencode.nix  optionalLines.nix  pkgs.nix  pre-commit.nix  pulumi.nix  python-overlay-precedence-integration.nix  python-package-fixes.nix  python-workspace-paths.nix  test-helpers.nix  test-recipe.nix
tools/pulumi-drift-report/: pyproject.toml
tools/pulumi-drift-report/src/jmmaloney4/tools/pulumi_drift_report/: __init__.py  __main__.py  models.py  report.py
tools/pulumi-drift-report/tests/: test_drift_report.py
(+214 files in other folders)
