[project]
name = "jmmaloney4-tools-pulumi-drift-report"
version = "0.0.1"
description = "Report Pulumi preview and refresh changes across every stack in a checkout"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pulumi-drift-report = "jmmaloney4.tools.pulumi_drift_report.__main__:main"

[build-system]
requires = ["setuptools==80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"jmmaloney4.tools.pulumi_drift_report" = ["py.typed"]
